validation not working - commented out
